--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header"></header>
+    <header>
+        <span class="announcement-span">Click any field to start playing!</span>
+    </header>
     <main>
-        <section class="play-field">   
+        <section class="play-field">
+            <div class="blocker">
+            </div>
             <div class="grid-container">
-                <div class="play-box top-left" data-box-id="0"><span>top-left</span></div>
-                <div class="play-box top-mid" data-box-id="1"><span>top-mid</span></div>
-                <div class="play-box top-right" data-box-id="2"><span>top-right</span></div>
-                <div class="play-box mid-left" data-box-id="3"><span>mid-left</span></div>
-                <div class="play-box mid-mid" data-box-id="4"><span>mid-mid</span></div>
-                <div class="play-box mid-right" data-box-id="5"><span>mid-right</span></div>
-                <div class="play-box bot-left" data-box-id="6"><span>bot-left</span></div>
-                <div class="play-box bot-mid" data-box-id="7"><span>bot-mid</span></div>
-                <div class="play-box bot-right" data-box-id="8"><span>bot-right</span></div>
+                <div class="play-box top-left" data-box-id="0"></div>
+                <div class="play-box top-mid" data-box-id="1"></div>
+                <div class="play-box top-right" data-box-id="2"></div>
+                <div class="play-box mid-left" data-box-id="3"></div>
+                <div class="play-box mid-mid" data-box-id="4"></div>
+                <div class="play-box mid-right" data-box-id="5"></div>
+                <div class="play-box bot-left" data-box-id="6"></div>
+                <div class="play-box bot-mid" data-box-id="7"></div>
+                <div class="play-box bot-right" data-box-id="8"></div>
             </div>
         </section>
     </main>
